@@ -1,5 +1,11 @@
 2005-04-14 Borut Razem <borut.razem AT siol.net>
 
+	* fixed bug 1045046 - SIGSEGV with really simple code?:
+	  src/pic16/pcode.c (pCodeInitRegisters)- pseudo stack size increased to 16
+	  src/pic16/ralloc.c (typeRegWithIdx) - error message on pseudo stack overflow
+
+2005-04-14 Borut Razem <borut.razem AT siol.net>
+
 	* src/pic16/gen.c (genInline), src/pic16/main.c (_process_pragma),
 	  src/pic16/device.h: temporarily disabled experimental #inline pragma
 	  for 2.5.0 release
